--- a/doxygen docs/latex/files.tex
+++ b/doxygen docs/latex/files.tex
@@ -1,11 +1,11 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}} \\*\+: Main program of the Tetris Game }{\pageref{tetris_game_8c}}{}
-\item\contentsline{section}{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8h_source}{tetris\+Game.\+h}} }{\pageref{tetris_game_8h_source}}{}
-\item\contentsline{section}{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_leveling_8c}{tetris\+Leveling.\+c}} \\*\+: Program for Tetris Leveling system }{\pageref{tetris_leveling_8c}}{}
-\item\contentsline{section}{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_leveling_8h_source}{tetris\+Leveling.\+h}} }{\pageref{tetris_leveling_8h_source}}{}
-\item\contentsline{section}{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_scoring_8c}{tetris\+Scoring.\+c}} \\*\+: Program for Tetris Scoring system }{\pageref{tetris_scoring_8c}}{}
-\item\contentsline{section}{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_scoring_8h_source}{tetris\+Scoring.\+h}} }{\pageref{tetris_scoring_8h_source}}{}
-\item\contentsline{section}{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{user_oled_8c}{user\+Oled.\+c}} \\*\+: Others functions for Oled drawing }{\pageref{user_oled_8c}}{}
-\item\contentsline{section}{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{user_oled_8h_source}{user\+Oled.\+h}} }{\pageref{user_oled_8h_source}}{}
+\item\contentsline{section}{C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}} \\*\+: Main program of the Tetris Game }{\pageref{tetris_game_8c}}{}
+\item\contentsline{section}{C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8h_source}{tetris\+Game.\+h}} }{\pageref{tetris_game_8h_source}}{}
+\item\contentsline{section}{C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_leveling_8c}{tetris\+Leveling.\+c}} \\*\+: Program for Tetris Leveling system }{\pageref{tetris_leveling_8c}}{}
+\item\contentsline{section}{C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_leveling_8h_source}{tetris\+Leveling.\+h}} }{\pageref{tetris_leveling_8h_source}}{}
+\item\contentsline{section}{C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_scoring_8c}{tetris\+Scoring.\+c}} \\*\+: Program for Tetris Scoring system }{\pageref{tetris_scoring_8c}}{}
+\item\contentsline{section}{C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_scoring_8h_source}{tetris\+Scoring.\+h}} }{\pageref{tetris_scoring_8h_source}}{}
+\item\contentsline{section}{C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{user_oled_8c}{user\+Oled.\+c}} \\*\+: Others functions for Oled drawing }{\pageref{user_oled_8c}}{}
+\item\contentsline{section}{C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{user_oled_8h_source}{user\+Oled.\+h}} }{\pageref{user_oled_8h_source}}{}
 \end{DoxyCompactList}
