--- a/doxygen docs/latex/tetris_game_8c.tex
+++ b/doxygen docs/latex/tetris_game_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Game.c File Reference}
-\hypertarget{tetris_game_8c}{}\label{tetris_game_8c}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisGame.c@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisGame.c}}
+\doxysection{C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Game.c File Reference}
+\hypertarget{tetris_game_8c}{}\label{tetris_game_8c}\index{C:/Users/Pierre/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisGame.c@{C:/Users/Pierre/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisGame.c}}
 
 
 \+: Main program of the Tetris Game  
