--- a/doxygen docs/latex/tetris_scoring_8c.tex
+++ b/doxygen docs/latex/tetris_scoring_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Scoring.c File Reference}
-\hypertarget{tetris_scoring_8c}{}\label{tetris_scoring_8c}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c}}
+\doxysection{C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Scoring.c File Reference}
+\hypertarget{tetris_scoring_8c}{}\label{tetris_scoring_8c}\index{C:/Users/Pierre/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c@{C:/Users/Pierre/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.c}}
 
 
 \+: Program for Tetris Scoring system  
