--- a/doxygen docs/latex/tetris_scoring_8h_source.tex
+++ b/doxygen docs/latex/tetris_scoring_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{tetris\+Scoring.\+h}
-\hypertarget{tetris_scoring_8h_source}{}\label{tetris_scoring_8h_source}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.h@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.h}}
+\hypertarget{tetris_scoring_8h_source}{}\label{tetris_scoring_8h_source}\index{C:/Users/Pierre/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.h@{C:/Users/Pierre/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/tetrisScoring.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{/*}}
