--- a/doxygen docs/latex/struct_t_e_t_r_i_m_i_n_o.tex
+++ b/doxygen docs/latex/struct_t_e_t_r_i_m_i_n_o.tex
@@ -24,4 +24,4 @@ Structure to locate the current tetrimino in the game.
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}}\end{DoxyCompactItemize}
+C\+:/\+Users/\+Pierre/\+Documents/\+Git\+\_\+\+Repos/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}}\end{DoxyCompactItemize}
