--- a/doxygen docs/latex/user_oled_8h_source.tex
+++ b/doxygen docs/latex/user_oled_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{user\+Oled.\+h}
-\hypertarget{user_oled_8h_source}{}\label{user_oled_8h_source}\index{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/userOled.h@{C:/Users/pontet/Documents/Git\_Repos/Tetris\_STM/Tetris\_STM\_code/tetrisGame/userOled.h}}
+\hypertarget{user_oled_8h_source}{}\label{user_oled_8h_source}\index{C:/Users/Pierre/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/userOled.h@{C:/Users/Pierre/Documents/Git\_Repos/Tetris-\/STM/Tetris\_STM\_code/tetrisGame/userOled.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{/*}}
@@ -23,7 +23,7 @@
 \DoxyCodeLine{00019\ \textcolor{keywordtype}{char}\ \mbox{\hyperlink{user_oled_8c_a86b173139967c187e228c0a2c56215ce}{ssd1306\_WriteStringVertical}}(\textcolor{keywordtype}{char}*\ str,\ FontDef\ Font,\ SSD1306\_COLOR\ color);}
 \DoxyCodeLine{00020\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a305f138587ae309f2f0e2ba3ddd83796}{drawTetrisStartGame}}();}
 \DoxyCodeLine{00021\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_aaf80dc343615929a9d7ca23689b573e0}{clearPlayZone}}();}
-\DoxyCodeLine{00022\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a1b46f95cb32d9af8eca89bad57d18210}{tetrisBordureDecor}}(SSD1306\_COLOR\ color);}
+\DoxyCodeLine{00022\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a99cdd81bceb4ed5d178c84c62ec794b8}{drawBorderDecor}}(SSD1306\_COLOR\ color);}
 \DoxyCodeLine{00023\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_ae0744272d835bb6e1f8ef839bfd92a06}{drawTetriminos}}();}
 \DoxyCodeLine{00024\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_a9ecefd15a6fad87becac106fde8ca70f}{Clignotement\_Ecran}}();}
 \DoxyCodeLine{00025\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{user_oled_8c_aec8e34e8d938666651abcd63389fb345}{Clignotement\_Click}}();}
